--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,10 +12,10 @@
   <script type="text/javascript" src="lib/jasmine-2.0.0/boot.js"></script>
 
   <!-- include source files here... -->
-  <script type="text/javascript" src="src/sona.js"></script>
+  <script type="text/javascript" src="dist/sona.js"></script>
 
   <!-- include spec files here... -->
-  <script type="text/javascript" src="spec/SonaSpec.js"></script>
+  <script type="text/javascript" src="spec/sona-spec.js"></script>
 </head>
 
 <body>
